--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: 
       - master
-      - dev
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   build:
