--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
+# Set the following to true for seeing the SQL statements (good for debugging if getting SQL error)
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto = update
