database heroku integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 server.port=8080
 
+# settings heroku database
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
+spring.jpa.hibernate.ddl-auto=create
+
+# local database
 # Enabling the H2-Console (local and remote)
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
@@ -13,4 +22,3 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 # Set the following to true for seeing the SQL statements (good for debugging if getting SQL error)
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto = update
