--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,9 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    // database
     runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'org.postgresql:postgresql:42.2.10'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
