--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,19 +6,19 @@ spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # local database
 # Enabling the H2-Console (local and remote)
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
+# spring.h2.console.enabled=true
+# spring.h2.console.settings.web-allow-others=true
 
 # Password for the H2-Console
-spring.datasource.url=jdbc:h2:file:./data/myDB
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.generate-ddl=true
+# spring.datasource.url=jdbc:h2:file:./data/myDB
+# spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+# spring.datasource.password=
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.generate-ddl=true
 # Set the following to true for seeing the SQL statements (good for debugging if getting SQL error)
 spring.jpa.show-sql=false
