update age query

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 # spring.datasource.minIdle=2
 # spring.datasource.initialSize=5
 # spring.datasource.removeAbandoned=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.url=jdbc:postgresql://ec2-3-248-121-12.eu-west-1.compute.amazonaws.com:5432/d9s85ut3515469
 # spring.datasource.driver-class-name=org.postgresql.Driver
 # spring.datasource.username=iqacjyanqnhkyx
