--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,9 @@ server.port=8080
 # settings heroku database, other settings are on heroku
 # max connections is 20
 spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.idle-timeout=500000
+spring.datasource.hikari.max-lifetime=1200000
 spring.jpa.hibernate.ddl-auto=update
-
-server.error.include-message=always
 
 # local database
 # Enabling the H2-Console (local and remote)
@@ -21,3 +20,5 @@ spring.jpa.generate-ddl=true
 
 # Set the following to true for seeing the SQL statements (good for debugging if getting SQL error)
 spring.jpa.show-sql=false
+
+server.error.include-message=always
