sset spring.jpa.hibernate.ddl-auto to none

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.idle-timeout=500000
 spring.datasource.hikari.max-lifetime=1200000
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # local database
 # Enabling the H2-Console (local and remote)
