--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 server.port=8080
 
-# settings heroku database, other settings are on heroku
+# settings heroku database, other settings are on heroku (Config Vars)
 # max connections is 20
 spring.datasource.hikari.maximum-pool-size=19
 spring.datasource.hikari.idle-timeout=500000
 spring.datasource.hikari.max-lifetime=1200000
-spring.jpa.hibernate.ddl-auto=none
 
 # local database
 # Enabling the H2-Console (local and remote)
@@ -17,6 +16,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 
 # Set the following to true for seeing the SQL statements (good for debugging if getting SQL error)
 spring.jpa.show-sql=false
