--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # max connections is 20
 spring.datasource.hikari.maximum-pool-size=16
 # spring.datasource.hikari.idle-timeout=500000
-spring.datasource.hikari.max-lifetime=1100000
+spring.datasource.hikari.max-lifetime=1000000
 
 # local database
 # Enabling the H2-Console (local and remote)
@@ -16,7 +16,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Set the following to true for seeing the SQL statements (good for debugging if getting SQL error)
 spring.jpa.show-sql=false
