change pool size timeout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,13 @@ server.port=8080
 
 # settings heroku database, other settings are on heroku (Config Vars)
 # max connections is 20
-spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.maximum-pool-size=12
 # spring.datasource.hikari.idle-timeout=500000
 spring.datasource.hikari.max-lifetime=1000000
+
+# set Query timout
+spring.jpa.properties.javax.persistence.query.timeout=4000
+
 
 # local database
 # Enabling the H2-Console (local and remote)
