--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ server.port=8080
 # settings heroku database, other settings are on heroku (Config Vars)
 # max connections is 20
 spring.datasource.hikari.maximum-pool-size=12
-# spring.datasource.hikari.idle-timeout=500000
 spring.datasource.hikari.max-lifetime=1000000
 
 # set Query timout
@@ -11,13 +10,14 @@ spring.jpa.properties.javax.persistence.query.timeout=5000
 
 # local database
 # Enabling the H2-Console (local and remote)
-# spring.h2.console.enabled=true
-# spring.h2.console.settings.web-allow-others=true
-spring.datasource.url=jdbc:h2:file:./data/myDB
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+
+spring.datasource.url=jdbc:h2:~/test;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
